--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -20,7 +20,7 @@
     </p>
   </div>
   <hr />
-  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+  <!-- <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <h4 class="ae-u-bolder">Secundaria : Bachiller En Ciencias</h4>
     <p>
       <b>Unidad Educativa Maria Auxiliadora</b>
@@ -171,7 +171,7 @@
       <br />
       Abril 2006, 24 Horas
     </p>
-  </div>
+  </div> -->
   <p class="au-flex au-pt-4 group-buttons">
     <a
       routerLink="/experience"
