--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -18,9 +18,8 @@
       Septiembre 2022 / Marzo 2023 - Madrid, España
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
-      Desarrollo Front-End usando Angular, Ionic, TypeScript, JavaScript,
-      Bootstrap, Css, HTML5, Firebase.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles con
+      Angular, Ionic, TypeScript, Firebase.
     </p>
   </div>
   <hr />
@@ -31,12 +30,10 @@
       Diciembre 2021 / Septiembre 2022 - Palencia, Castilla y León, España
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
-      desarrollo de aplicaciones móviles y desarrollo de microservicios, API
-      Rest. Análisis y diseño de base de datos. Desarrollo Front-End usando
-      Angular, Ionic, React Native, TypeScript, JavaScript, Bootstrap, JQuery,
-      Css, HTML5. Desarrollo Back-End con NodeJS, ExpressJS, Python, Flask.
-      Bases de Datos: SQL Server 2008/2012/2016, MySQL, PostgreSQL, MongoDB.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles,
+      desarrollo de microservicios con Angular, Ionic, TypeScript, React Native,
+      JavaScript, Bootstrap, Node.js, Express.js, NestJS. Bases de datos: SQL
+      Server, PotsgreSQL, MySQL, MongoDB.
     </p>
   </div>
   <hr />
@@ -47,9 +44,8 @@
       Septiembre 2021 / Diciembre 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
-      Desarrollo Front-End usando Angular, Ionic, AngularJS, TypeScript,
-      JavaScript, Bootstrap, JQuery, Css, HTML5.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles con
+      AngularJS, Angular, Ionic, TypeScript, JavaScript.
     </p>
   </div>
   <hr />
@@ -60,9 +56,8 @@
       Junio 2021 / Octubre 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
-      Desarrollo Front-End usando Angular, React Native, TypeScript, JavaScript,
-      Bootstrap, Css, HTML5. Bases de datos: SQL Server 2016.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles con
+      Angular, TypeScript, React Native, JavaScript, Bootstrap.
     </p>
   </div>
   <hr />
@@ -73,12 +68,10 @@
       Mayo 2020 / Mayo 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
-      desarrollo de aplicaciones móviles y de escritorio, desarrollo de
-      microservicios. Análisis y diseño de base de datos. Desarrollo Front-End
-      usando Angular, Ionic, TypeScript, JavaScript, Bootstrap, JQuery, Ajax,
-      Css, HTML, Visual Fox Pro 9. Desarrollo Back-End con NodeJS, Express.js,
-      PHP. Bases de datos: SQL Server 2008/2012, MySQL, MongoDB.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles,
+      desarrollo de microservicios con Angular, Ionic, TypeScript, JavaScript,
+      Bootstrap, Node.js, Express.js. Bases de datos: SQL Server, MySQL,
+      MongoDB.
     </p>
   </div>
   <hr />
@@ -89,12 +82,10 @@
       Mayo 2018 / Mayo 2020 - Lima, Peru
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
-      desarrollo de aplicaciones móviles y de escritorio, desarrollo de
-      microservicios. Análisis y diseño de base de datos. Desarrollo Front-End
-      usando Angular, Ionic, TypeScript, JavaScript, Bootstrap, JQuery, Ajax,
-      Css, HTML5, Visual Fox Pro 9. Desarrollo Back-End con NodeJS, ExpressJS,
-      PHP. Bases de datos: SQL Server 2008/2012, MySQL, MongoDB.
+      <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles,
+      desarrollo de aplicaciones de escritorio, desarrollo de microservicios
+      usando Angular, Ionic, TypeScript, JavaScript, Bootstrap, Visual Fox Pro
+      9, Node.js, Express.js, PHP. Bases de datos: SQL Server, MySQL, MongoDB.
     </p>
   </div>
   <hr />
@@ -105,21 +96,17 @@
       Diciembre 2009 / Marzo 2018 - Puerto Cabello, Venezuela
     </p>
     <p style="text-align: justify">
-      <b>Tareas realizadas:</b> Análisis, diseño, desarrollo e implementación de
-      sistemas, desarrollo web, desarrollo de aplicaciones de escritorio.
-      Análisis y diseño de base datos. Documentación técnica de sistemas.
-      Soporte técnico en todos los Niveles. Desarrollo Front-End usando
-      JavaScript, Bootstrap, JQuery, Ajax, Css, HTML, Visual Fox Pro 9.
-      Desarrollo Back-End con PHP. Bases de datos: SQL Server 2005/2008/2012,
-      PostgreSQL, MySQL.
+      <b>Tareas realizadas:</b>Desarrollo web y desarrollo de aplicaciones de
+      escritorio con JavaScript, Bootstrap, JQuery, Ajax, Css, HTML, Visual Fox
+      Pro 9, PHP. Bases de datos: SQL Server, PostgreSQL, MySQL.
     </p>
   </div>
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
       <b
-        >Practicante en Servicio Nacional Integrado de Administración Aduanera y Tributaria
-        (SENIAT)</b
+        >Practicante en Servicio Nacional Integrado de Administración Aduanera y
+        Tributaria (SENIAT)</b
       >
       <br />
       Enero 2009 / Abril 2009 - Puerto Cabello, Venezuela
@@ -127,8 +114,7 @@
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Apoyo a la unidad de informática, soporte
       técnico y administración de Active Directory, administración básica de
-      redes. Desarrollo de software usando Visual Fox Pro 9. Base de Datos SQL
-      Server 2005.
+      redes.
     </p>
   </div>
 
