--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,42 +1,72 @@
+<!-- <div class="ae-container-fluid ae-container-fluid--inner rk-main"></div> -->
 <section class="ae-container-fluid rk-main">
-    <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">      
-      <div align="center" *ngIf="loading" >       
-        <strong>Cargando</strong>       
-        <div class="loader loader--style1" title="0">
-          <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
-          <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
+  <br />
+  <h4 class="au-lg-ta au-mb-3 au-pl-4 au-pr-4">
+    Estos son algunos proyectos en los que he participado y desarrollos que he
+    realizado a lo largo de mi carrera
+  </h4>
+  <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
+    <div align="center" *ngIf="loading">
+      <strong>Cargando</strong>
+      <div class="loader loader--style1" title="0">
+        <svg
+          version="1.1"
+          id="loader-1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          width="40px"
+          height="40px"
+          viewBox="0 0 40 40"
+          enable-background="new 0 0 40 40"
+          xml:space="preserve"
+        >
+          <path
+            opacity="0.2"
+            fill="#000"
+            d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
             s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634
-            c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"/>
-          <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
-            C22.32,8.481,24.301,9.057,26.013,10.047z">
-            <animateTransform attributeType="xml"
+            c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"
+          />
+          <path
+            fill="#000"
+            d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+            C22.32,8.481,24.301,9.057,26.013,10.047z"
+          >
+            <animateTransform
+              attributeType="xml"
               attributeName="transform"
               type="rotate"
               from="0 20 20"
               to="360 20 20"
               dur="0.5s"
-              repeatCount="indefinite"/>
-            </path>
-          </svg>
-        </div>
-        <span>Por Favor Espere</span>
+              repeatCount="indefinite"
+            />
+          </path>
+        </svg>
       </div>
-      
-      <div *ngIf="!loading" class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4" >       
-        <a *ngFor="let item of portafolio" [routerLink]="(['/detalle',item.id])" class="rk-item ae-masonry__item pointer">
-          <img src="{{item.image}}" alt="">
-          <div class="item-meta">
-            <h2>{{item.name}}</h2>
-            <!-- <p>{{item.description}}</p> -->
-            <p>{{item.type}}</p>
-          </div>
-        </a>
-      </div>
-    </section>
-  </section>
+      <span>Por Favor Espere</span>
+    </div>
 
-  <!-- <section class="ae-container-fluid rk-main">
+    <div *ngIf="!loading" class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+      <a
+        *ngFor="let item of portafolio"
+        [routerLink]="['/detalle', item.id]"
+        class="rk-item ae-masonry__item pointer"
+      >
+        <img src="{{ item.image }}" alt="" />
+        <div class="item-meta">
+          <h2>{{ item.name }}</h2>
+          <!-- <p>{{item.description}}</p> -->
+          <p>{{ item.type }}</p>
+        </div>
+      </a>
+    </div>
+  </section>
+</section>
+
+<!-- <section class="ae-container-fluid rk-main">
     <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
 
       <div class="ae-grid">
@@ -212,4 +242,4 @@
       </div>
 
     </section> -->
-  <!-- </section> -->
+<!-- </section> -->
